<!--
  ~ Copyright (C) 2016 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".RemoteLanLauncher"
                tools:ignore="MergeRootFrame">

  <LinearLayout
    android:id="@+id/linearLayout14"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/current_order"
      android:textSize="24sp"
      android:textStyle="bold"/>

    <TextView
      android:id="@+id/CurrentOrderNumber"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  </LinearLayout>

  <ListView
    android:id="@+id/CurrentOrderItems"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/gridLayout"
    android:layout_alignParentEnd="false"
    android:layout_below="@+id/linearLayout14"
    android:layout_centerHorizontal="true"/>

  <GridLayout
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/linearLayout3"
    android:layout_centerHorizontal="true"
    android:columnCount="2"
    android:rowCount="4">

    <TextView android:text="@string/subtotal"/>

    <TextView
      android:id="@+id/SubtotalLabel"
      android:layout_gravity="right"/>

    <TextView android:text="@string/discounts"/>

    <TextView
      android:id="@+id/DiscountsLabel"
      android:layout_gravity="right"/>

    <TextView android:text="@string/tax"/>

    <TextView
      android:id="@+id/TaxLabel"
      android:layout_gravity="right"/>

    <TextView
      android:text="@string/total"
      android:textSize="24sp"/>

    <TextView
      android:id="@+id/TotalLabel"
      android:layout_gravity="right"/>
  </GridLayout>

  <LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true">

    <Button
      android:id="@+id/NewOrderButton"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_margin="4dp"
      android:layout_weight=".2"
      android:background="@drawable/button_border"
      android:text="@string/_new"
      />

    <Button
      android:id="@+id/SaleButton"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_margin="4dp"
      android:layout_weight=".4"
      android:background="@drawable/button_green"
      android:text="@string/sale"
      android:textColor="@color/white"/>

    <Button
      android:id="@+id/AuthButton"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_margin="4dp"
      android:layout_weight=".4"
      android:background="@drawable/button_green"
      android:text="@string/auth"
      android:textColor="@color/white"/>
  </LinearLayout>


</RelativeLayout>